# test_consumecasadi

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
